[project]
name = "flight-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Kseniya Shajhvalieva",email = "kseniyashajhvalieva@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
